--- a/Python/Trabalho_deep_learning_reinforcement_learning/Pulsar_Star_exercicio_12.ipynb
+++ b/Python/Trabalho_deep_learning_reinforcement_learning/Pulsar_Star_exercicio_12.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/michaeldouglas/4linux/blob/master/Python/Trabalho_deep_learning_reinforcement_learning\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/michaeldouglas/4linux/blob/master/Python/Trabalho_deep_learning_reinforcement_learning/Pulsar_Star_exercicio_12.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
